fixes spacing and fixes jitter on hover

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -17,9 +17,8 @@
     margin-right: auto;
 }
 
-
 .keyword {
-    color:rgb(144, 251, 220);
+    color: rgb(144, 251, 220);
     font-size: 24px;
 }
 
@@ -37,6 +36,7 @@
     margin-right: auto;
     border-radius: 50%;
     margin-top: 60px;
+    height: 300px;
 }
 
 .table {
@@ -44,19 +44,14 @@
     font-size: 15px;
 }
 
-
 .table-dark {
     background-color: rgb(13, 25, 45);
 }
 
-@media only screen 
-and (min-device-width : 375px) 
-and (max-device-width : 812px) 
-and (-webkit-device-pixel-ratio : 3) {
-	.about {
+@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-device-pixel-ratio: 3) {
+    .about {
         margin-top: 50px;
     }
-
     .me {
         margin-left: 50px;
         margin-right: 50px;
