--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -1,35 +1,40 @@
 .contact-me {
-	margin-left: auto;
-	margin-right: auto;
-	text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
 
 .contact-li {
-	font-size: 25px; 
-	list-style-type: none;
+  font-size: 25px;
+  list-style-type: none;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0;
 }
 
 .contact-li a {
-	color: rgb(144, 251, 220);
+  color: rgb(144, 251, 220);
 }
 
 .contact-li li {
-	margin-top: 10px;
+  margin-top: 10px;
 }
 
 .contact-li:last-child {
-	margin-bottom: 200px;
+  margin-bottom: 200px;
 }
 
-@media only screen 
-and (min-device-width : 375px) 
-and (max-device-width : 812px) 
-and (-webkit-device-pixel-ratio : 3) {
-	.contact-li:last-child {
-		margin-bottom: 100px;
-	}
-
-	.contact-me {
-		margin-top: 50px;
-	}
+@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-device-pixel-ratio: 3) {
+  .contact-li:last-child {
+    margin-bottom: 100px;
+  }
+  .contact-me {
+    margin-top: 50px;
+  }
+  .contact-li {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+  }
 }
