--- a/src/Components/Typewriter/Typewriter.css
+++ b/src/Components/Typewriter/Typewriter.css
@@ -1,36 +1,34 @@
-
-
 .text {
     margin-top: 100px;
+    text-align: center;
 }
 
 .hook {
-margin-top: 40px;
-color: rgb(144, 251, 220);
-margin-left: 50px;
-
-}
-
-.name, .build {
-font-size: 80px;
-margin-left: 40px;
+    margin-top: 40px;
+    color: rgb(144, 251, 220);
 }
 
 .name {
-color: white;
+    font-size: 80px;
+}
+
+.name {
+    color: white;
 }
 
 .build {
-color: gray;
+    color: gray;
+    font-size: 80px;
+    text-align: center;
 }
 
-.lead, .seeker, .software{
-color: rgb(144, 251, 220);
+.lead, .seeker, .software {
+    color: rgb(144, 251, 220);
 }
 
 .Cursor {
-color: rgb(144, 251, 220) !important;
-font-size: 80px;
+    color: rgb(144, 251, 220) !important;
+    font-size: 80px;
 }
 
 .description {
@@ -42,23 +40,17 @@ font-size: 80px;
 }
 
 .projects:hover {
-    opacity: .5;
+    opacity: 0.5;
 }
 
-
-@media only screen 
-and (min-device-width : 375px) 
-and (max-device-width : 812px) 
-and (-webkit-device-pixel-ratio : 3) {
-	.description {
+@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-device-pixel-ratio: 3) {
+    .description {
         margin-left: 25px;
         margin-right: 25px;
     }
-    
     .name, .build {
         font-size: 40px;
     }
-
     .Cursor {
         font-size: 40px;
     }
